--- a/TwitterBackup.Web/Views/Shared/_SearchBar.cshtml
+++ b/TwitterBackup.Web/Views/Shared/_SearchBar.cshtml
@@ -1,15 +1,30 @@
 ﻿@using TwitterBackup.Models
 
-@if (this.User.Identity.IsAuthenticated)
-{
-    <div class="col-sm-3 col-md-3">
-        <form class="navbar-form" asp-controller="Tweeters" asp-action="SearchResults" method="get" role="search">
-            <div class="input-group">
-                <input name="searchString" type="text" class="form-control" placeholder="Search tweeter">
-                <div class="input-group-btn">
-                    <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+@*@if (this.User.Identity.IsAuthenticated)
+    {
+        <div class="col-sm-3 col-md-3">
+            <form class="navbar-form" asp-controller="Tweeters" asp-action="SearchResults" method="get" role="search">
+                <div class="input-group">
+                    <input name="searchString" type="text" class="form-control" placeholder="Search tweeter">
+                    <div class="input-group-btn">
+                        <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                    </div>
                 </div>
+            </form>
+        </div>
+    }*@
+
+<div class="navbar-widgets">
+    @{
+        if (Context.User.Identity.IsAuthenticated)
+        {
+            <div class="search-bar nav navbar-nav m-t-xs">
+                <form asp-controller="Tweeters" asp-action="SearchResults" method="get">
+                    <input type="search" name="searchString" placeholder="Search Twitter" />
+                </form>
             </div>
-        </form>
-    </div>
-}
+        }
+
+        @await Html.PartialAsync("_LoginPartial")
+    }
+</div>
