--- a/TwitterBackup.Web/wwwroot/css/site.css
+++ b/TwitterBackup.Web/wwwroot/css/site.css
@@ -35,18 +35,100 @@
 }
 
 /* Search bar*/
-.search-input {
-    background-color: #f5f8fa;
-    border-radius: 21px;
-    border: 1px solid #e6ecf0;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
+.search-bar {
     color: #14171a;
-    display: block;
-    font-size: 12px;
-    height: 32px;
-    line-height: 16px;
-    padding: 8px 32px 8px 12px;
-    transition: all .2s ease-in-out;
+}
+
+.navbar {
+    background-color: rgba(255, 255, 255, 0);
+    border: none;
+}
+
+.navbar-inverse .navbar-nav > li > a {
+    color: rgba(200,200,200,1);
+}
+
+.navbar-inverse .navbar-brand {
+    color: rgba(250,250,250,1);
+}
+
+.navbar-inverse .btn-link {
+    color: rgba(250,250,250,1);
+}
+
+@media (max-width: 995px) {
+
+    .navbar {
+        background-color: black;
+    }
+    .navbar-header {
+        float: none;
+    }
+
+    .navbar-toggle {
+        display: block;
+    }
+
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+
+        .navbar-collapse.collapse {
+            display: none !important;
+        }
+
+    .navbar-nav {
+        float: none !important;
+        margin: 7.5px -15px;
+    }
+
+        .navbar-nav > li {
+            float: none;
+        }
+
+            .navbar-nav > li > a {
+                padding-top: 10px;
+                padding-bottom: 10px;
+            }
+
+    .navbar-text {
+        float: left;
+        margin: 15px 0;
+    }
+    /* since 3.1.0 */
+    .navbar-collapse.collapse.in {
+        display: block !important;
+    }
+
+    .collapsing {
+        overflow: hidden !important;
+    }
+
+    .navbar-widgets {
+        float: left;
+    }
+}
+
+footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
     width: 100%;
+    background-color: #002a43;
+    color: white;
+    text-align: center;
+    background: inherit;
+}
+
+html {
+    background: url(../images/home.jpg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+body {
+    background-color: transparent;
 }
