--- a/TwitterBackup.Web/Views/Shared/_SearchBar.cshtml
+++ b/TwitterBackup.Web/Views/Shared/_SearchBar.cshtml
@@ -2,26 +2,12 @@
 @using Microsoft.AspNetCore.Mvc.Routing
 @using TwitterBackup.Models
 
-    {
-        <div class="col-sm-3 col-md-3">
-            <form class="navbar-form" asp-controller="Tweeters" asp-action="SearchResults" method="get" role="search">
-                <div class="input-group">
-                    <input name="searchString" type="text" class="form-control" placeholder="Search tweeter">
-                    <div class="input-group-btn">
-                        <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-                    </div>
-@*@if (this.User.Identity.IsAuthenticated)
-                </div>
-            </form>
-        </div>
-    }*@
-
 <div class="navbar-widgets">
     @{
         if (Context.User.Identity.IsAuthenticated)
         {
             <div class="search-bar nav navbar-nav m-t-xs">
-                <form asp-controller="Tweeters" asp-action="SearchResults" method="get">
+                <form asp-area="" asp-controller="Tweeters" asp-action="SearchResults" method="get">
                     <input type="search" name="searchString" placeholder="Search Twitter" />
                 </form>
             </div>
