--- a/TwitterBackup.Web/Areas/Admin/Views/Statistics/Index.cshtml
+++ b/TwitterBackup.Web/Areas/Admin/Views/Statistics/Index.cshtml
@@ -69,7 +69,7 @@
     <div class="col-md-12">
 
         <div class="table-responsive">
-            <table id="mytable" class="table table-striped">
+            <table id="statistics-table" class="table table-striped">
                 <thead>
                     <tr>
                         <th>
