--- a/TwitterBackup.Web/Views/Tweeters/SearchResults.cshtml
+++ b/TwitterBackup.Web/Views/Tweeters/SearchResults.cshtml
@@ -60,16 +60,18 @@
         }
     </div>
 
-    <div id="add-to-favorite-error" class="modal fade">
+    <div id="alert-modal-failure" class="modal fade">
         <div class="modal-dialog">
             <div class="modal-content" id="error-modal">
                 <div class="modal-header" style="background-color: red; color: white">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+                        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                    </button>
                     <h2 class="modal-title">Error</h2>
                 </div>
                 <div class="modal-body">
 
-                    <h4 class="modal-error-message"></h4>
+                    <h4 class="modal-error-message" id="alert-modal-failure-message" style="position: center"></h4>
 
                 </div>
                 <div class="modal-footer">
@@ -78,11 +80,14 @@
             </div><!-- /.modal-content -->
         </div><!-- /.modal-dialog -->
     </div><!-- /.modal -->
+
 </body>
 </html>
 
 @section Scripts
     {
-    <script src="/js/btn-follow-following.js"></script>
-    <script src="/js/btn-follow-hover.js"></script>
+
+    <script src="~/js/btn-follow-following.js"></script>
+    <script src="~/js/btn-follow-hover.js"></script>
+    <script src="~/js/alert-profile-not-saved.js"></script>
 }
