--- a/TwitterBackup.Web/Views/Shared/_Layout.cshtml
+++ b/TwitterBackup.Web/Views/Shared/_Layout.cshtml
@@ -22,10 +22,9 @@
               asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
               asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
-        <link rel="stylesheet" href="css/tweeterProfilePage.css" />
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
     </environment>
- 
+
 </head>
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
     @await Html.PartialAsync("_NavBarPartial")
@@ -45,7 +44,8 @@
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
-        <script src="~/js/grayscale.min.js"></script>
+        <script src="~/js/navbar.js"></script>
+        <script src="~/js/save-twet.js"></script>
     </environment>
     <environment exclude="Development">
         <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.2.0.min.js"
@@ -61,7 +61,8 @@
                 integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa">
         </script>
         <script src="~/js/site.min.js" asp-append-version="true"></script>
-        <script src="~/js/grayscale.min.js"></script>
+        <script src="~/js/navbar.js"></script>
+        <script src="~/js/save-twet.js"></script>
     </environment>
 
     @RenderSection("Scripts", required: false)
