--- a/TwitterBackup.Web/Views/Tweeters/Profile.cshtml
+++ b/TwitterBackup.Web/Views/Tweeters/Profile.cshtml
@@ -116,8 +116,8 @@
         <div class="col-md-8 col-sm-12 pull-right posttimeline">
             @{
                 <ul class="nav nav-tabs" id="myTab">
-                    <li class="active"><a href="#saved">Saved Tweets</a></li>
-                    <li><a href="#new">New Tweets</a></li>
+                    <li class="active"><a tweeter-id="@Model.Tweeter.TweeterId" href="#saved">Saved Tweets</a></li>
+                    <li><a tweeter-id="@Model.Tweeter.TweeterId" href="#new">New Tweets</a></li>
                 </ul>
 
                 <div class="tab-content">
@@ -127,6 +127,9 @@
                             {
                                 tweetViewModel.Tweeter = new Tweeter();
                                 tweetViewModel.Tweeter.Name = Model.Tweeter.Name;
+                                tweetViewModel.Tweeter.ScreenName = Model.Tweeter.ScreenName;
+                                tweetViewModel.Tweeter.ProfileImageUrl = Model.Tweeter.ProfileImageUrl;
+                                tweetViewModel.Tweeter.TweeterId = Model.Tweeter.TweeterId;
                             }
 
                             await Html.RenderPartialAsync("~/Views/Tweets/AllTweets.cshtml", Model.SavedTweets);
@@ -138,6 +141,9 @@
                             {
                                 tweetViewModel.Tweeter = new Tweeter();
                                 tweetViewModel.Tweeter.Name = Model.Tweeter.Name;
+                                tweetViewModel.Tweeter.ScreenName = Model.Tweeter.ScreenName;
+                                tweetViewModel.Tweeter.ProfileImageUrl = Model.Tweeter.ProfileImageUrl;
+                                tweetViewModel.Tweeter.TweeterId = Model.Tweeter.TweeterId;
                             }
 
                             await Html.RenderPartialAsync("~/Views/Tweets/AllTweets.cshtml", Model.NewTweets);
