--- a/TwitterBackup.Web/wwwroot/css/tweeterProfilePage.css
+++ b/TwitterBackup.Web/wwwroot/css/tweeterProfilePage.css
@@ -2,7 +2,6 @@
 body {
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
-    background-color: #f0f3f5;
     margin-top: 40px;
 }
 /*==============================*/
@@ -441,4 +440,12 @@ body {
 
 .panel {
     background-color: rgba(255, 255, 255, 0.9);
+}
+
+.btn-save-tweet {
+    margin: 10px;
+}
+
+.btn-comment {
+    margin: 10px;
 }
